--- a/package.json
+++ b/package.json
@@ -6,17 +6,12 @@
     "@fortawesome/fontawesome-free": "^5.5.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "jquery": "^3.4.0",
     "node-sass": "^4.11.0",
-    "path": "^0.12.7",
-    "popper.js": "^1.15.0",
     "rc-pagination": "^1.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,6 +27,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:5000"
+  ]
 }
