--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+npm-debug.log
 /.pnp
 .pnp.js
 
@@ -17,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
@@ -24,3 +26,9 @@ yarn-error.log*
 
 # env file
 .env
+.npmrc
+todos/
+
+# Editors
+.idea
+.vscode
